--- a/Traffic-Cop-App/package.json
+++ b/Traffic-Cop-App/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.0.2",
+    "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
@@ -30,7 +32,9 @@
     "react-native-mmkv": "^2.12.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-redux": "^9.1.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
